--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-primary: 226 255 0;
+    --color-secondary: 7 33 56;
+  }
+}
